# PythonTest_18082025

./: .gitignore  README.md  requirements.txt
Day_1/: example.py
Day_1/Practice/: strong_password.py
Day_1/Solutions/: sol_strong_password_v1.py  sol_strong_password_v2.py  sol_strong_password_v3.py
Day_1/unittest_examples/: calc.py  calc_test.py
Day_2/: global_nonlocal_ex.py  more_calc.py  more_calc_test.py  result.txt  result2.txt  run_tests.py  subtests_test.py
Day_2/Practice/: encode_decode.py
Day_2/Solutions/: decrypt.py  encode_decode.py  encode_decode_test.py  sol_strong_password_v1.py  sol_strong_password_v1_test.py  test_decrypt.py
Day_3/Solutions/: codec26.py  sol_encode_decode.py  test_codec26.py  test_fixtures.py  test_fixtures_v2.py  test_fixtures_v3.py
Day_3/django_project/: pytest.ini
Day_3/django_project/books/: models.py  urls.py  views.py
Day_3/django_project/django_project/: settings.py  urls.py
Day_3/django_project/pages/: urls.py  views.py
Day_3/django_project/templates/: base.html
Day_3/pytest_materials/Exercise/: fixture_practice.md
Day_3/pytest_materials/Lection1/: Lection_1.md  test_two.py
Day_3/pytest_materials/Lection2/: Lection2.md  test_classes.py  test_exceptions.py  (+3 more)
Day_3/pytest_materials/tasks_project/: README.md  pyproject.toml
Day_3/pytest_materials/tasks_project/src/tasks/: __init__.py  api.py  cli.py  db.py
Day_4/flask_user_management/: README.md  app.py  models.py  my_reqs.http  requirements.txt
Day_5/Selenium_examples/: requirements.txt
Day_5/app_example/: pytest.ini  requirements.txt  store.db
(+32 files in other folders)
